# maskLM

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  feature-requirements.md  fly.toml  progress.txt  pyproject.toml  reflection.md  retrospective.md  session_log.md
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/skills/tdd-feature/: SKILL.md
.claude/skills/tdd-feature-v2/: SKILL.md
.github/workflows/: ci.yml  deploy-fly.yml  quality-gates.yml
backend/app/: main.py  routes.py  schemas.py
backend/tests/: conftest.py  test_routes.py
docs/: PRD.md  mcp-setup.md
docs/blog/: blog-post-skeleton.md
docs/reflections/: daiki-reflection.md  huizhirong-reflection.md
docs/sprints/: sprint-1-planning.md  sprint-1-retrospective.md  sprint-2-planning.md  sprint-2-retrospective.md
docs/standups/: README.md  sprint-1-standups.md  sprint-2-standups.md
docs/testing-data/: samples.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: HistoryPanel.tsx  Icons.tsx  MaskResult.tsx  Navbar.tsx  TextInput.tsx  Toast.tsx  UnmaskResult.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useLocalHistory.ts
frontend/src/pages/: LoginPage.tsx  MaskPage.tsx
frontend/src/types/: index.ts
frontend/tests/e2e/: mask-flow.spec.ts
src/: masker.py  models.py  validation.py
tests/: test_reinjection.py  test_session_store.py  test_validation.py
